--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="C:\Users\saurabh\Documents\web/styles.css">
+    <link rel="stylesheet" href="https://github.com/saurabhchand8/yes/styles.css">
     <link rel="icon" href="C:\Users\saurabh\Documents\web\favicon.ico">
 
       <!--font family embedding-->
@@ -19,7 +19,7 @@
     <div class="top">
      <h1>I'm Saurabh.</h1>
       <p>a prorammer</p>
-      <img src="C:\Users\saurabh\Documents\web\back1.png" alt="background image">
+      <img src="https://github.com/saurabhchand8/yes/blob/main/back1.png" alt="background image">
      </div>
 
 
@@ -29,7 +29,7 @@
 
 
      <div class="bio"  >
-       <img class="my-pic"   src="C:\Users\saurabh\Documents\web\P21.png" alt=" my pic" >
+       <img class="my-pic"   src="https://github.com/saurabhchand8/yes/blob/main/P21.png" alt=" my pic" >
         <h2 >Hi!</h2>
         <p class="abtme"> Welcome to my webpage</p>
      </div>
@@ -40,7 +40,7 @@
 <!--Skills part-->
 
      <div class="div3" >
-      <img class="hat" src="C:\Users\saurabh\Documents\web\Skill.png" alt="skills" >
+      <img class="hat" src="https://github.com/saurabhchand8/yes/blob/main/skill.png" alt="skills" >
        <h2 class="h2">Skills</h2>
        <table >
          <ul class="list"  style="list-style:none;" >
