--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!--Skills part-->
 
      <div class="div3" >
-      <img class="hat" src="https://github.com/saurabhchand8/yes/blob/main/skill.png" alt="skills" >
+      <img class="hat" src="C:\Users\saurabh\Documents\web\back1.png" alt="skills" >
        <h2 class="h2">Skills</h2>
        <table >
          <ul class="list"  style="list-style:none;" >
